# Citrus

./: .cmake-format.json  .config.sh  .gitignore  .gitmodules  .nitpick.toml  .pre-commit-config.yaml  .tool-versions  .zshrc  CMakeLists.txt  Makefile  anypkg.json  nitpick-style.toml  package.json
.github/: CODEOWNERS
nitpick/: BasicConfig.toml  editorconfig.toml  gitlint.toml  package-json.toml  pylint.toml
scripts/: Citrus-config.cmake  CitrusConfig.cmake  alphabetize_codeowners.py  update_cmakeformat.sh  util.make
